update api paths and docs
